--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,4 +6,7 @@
   .hoverEffect {
     @apply duration-500 ease-in-out;
   }
+  .navBarItem {
+    @apply text-base font-semibold hover:text-darkOrange duration-300 cursor-pointer
+  }
 }
